# chip-8-emulator

./: .clang-tidy  .cmake-format  .cmake-format.json  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  appveyor.yml  appveyor_conan.conf  conanfile.py  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
chip8_emulator/: CMakeLists.txt
cmake/: Conan.cmake  compiler_warnings.cmake  prevent_insource.cmake  sanitizers.cmake  static_analyzers.cmake
src/: CMakeLists.txt  chip8.cpp  chip8.h  chip8_emulator.cpp  chip8_emulator.h  main.cpp
src/arch/: CMakeLists.txt  cpu.cpp  cpu.h  graphics.cpp  graphics.h  keypad.cpp  keypad.h  memory.cpp  memory.h  timer.cpp  timer.h
src/display/: CMakeLists.txt  display.cpp  display.h  input_events.h  keys.h
src/sdl_interface/: CMakeLists.txt  main.cpp  sound.cpp  sound.h
test/: CMakeLists.txt  cpu_test.cpp  graphics_test.cpp  keypad_test.cpp  memory_test.cpp  opcode_test.cpp
