# CMakeList.txt : CMake project for chip8_emulator, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (chip8_emulator "chip8_emulator.cpp" "chip8_emulator.h")

# TODO: Add tests and install targets if needed.
